[metadata]
name = gasket
version = 0.1
summary = Gasket is a system that proveds authentication and authorisation to the Faucet network controller.
author = Michael Baird
author-email = Michael.Baird@ecs.vuw.ac.nz
home-page = https://www.github.com/bairdo/gasket
platform = any
classifier =
    Development Status :: 3 - Alpha
    Topic :: System :: Networking
    Natural Langauge :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Operating System :: Unix
keywords = 
    openflow
    openvswitch
    ryu
    faucet
    802.1X
    authentication

[files]
packages = 
    gasket
data_files =
    etc/faucet =
        etc/faucet/faucet.yaml
        etc/faucet/faucet-acls.yaml
    etc/faucet/gasket = 
        etc/faucet/gasket/auth.yaml
        etc/faucet/gasket/base-no-authed-acls.yaml
        etc/faucet/gasket/rules.yaml
